# TD_HOME

./: README.md  index.html  script.js  styles.css
HDA_TOOLS/: lop_sop_uvsamplecamv2.3.4.hda  sop_geo_damage_beta.1.11.hda
SLDPRT_convert/: AssimpNativeBootstrap.cs  ConversionResult.cs  Logger.cs  MainForm.cs  Program.cs  README.txt  SolidWorksBatchConverter.cs  SolidWorksBatchConverter.csproj  StlToFbxConverter.cs
SLDPRT_convert/Properties/: AssemblyInfo.cs
TEST_CONVERT2/: CMakeLists.txt  build_occt.bat  build_openusd.bat  build_project.bat  convert_batch.bat  convert_batch_stl.bat  convert_batch_usd.bat  copy_deps.bat  copy_dlls.bat  create_test.cpp  occt_mesh_transform_bugfix.md  test_convert.ps1  test_debug.bat  test_usd.cpp
TEST_CONVERT2/include/: Converter.h  ErrorHandler.h  MeshExtractor.h  MeshGenerator.h  MeshSettings.h  StepReader.h  StlWriter.h  UsdWriter.h  UsdWriterCore.h
TEST_CONVERT2/inputfile/: small_test.step
TEST_CONVERT2/occt_install/: env.bat
TEST_CONVERT2/occt_install/cmake/: OpenCASCADEApplicationFrameworkTargets-release.cmake  OpenCASCADEApplicationFrameworkTargets.cmake  OpenCASCADECompileDefinitionsAndFlags-release.cmake  OpenCASCADEConfig.cmake  OpenCASCADEDEToolsTargets-release.cmake  OpenCASCADEDEToolsTargets.cmake  OpenCASCADEDataExchangeTargets.cmake  OpenCASCADEFoundationClassesTargets.cmake  OpenCASCADEModelingAlgorithmsTargets.cmake  OpenCASCADEModelingDataTargets.cmake  OpenCASCADEVisualizationTargets.cmake
TEST_CONVERT2/occt_install/win64/vc14/lib/: TKBinL.lib  TKDE.lib  TKDECascade.lib  TKDEGLTF.lib  TKDEIGES.lib  TKDEOBJ.lib  TKDEPLY.lib  TKDESTL.lib  TKDEVRML.lib  TKExpress.lib  TKGeomAlgo.lib  TKMath.lib  TKRWMesh.lib  TKShHealing.lib  TKV3d.lib  TKXCAF.lib  TKXSBase.lib  TKernel.lib
TEST_CONVERT2/occt_source/OCCT-7_8_0/: CMakeLists.txt
TEST_CONVERT2/src/: Converter.cpp  ErrorHandler.cpp  Logger.cpp  Logger.h  MeshExtractor.cpp  MeshExtractor.h  MeshGenerator.cpp  StepReader.cpp  StlWriter.cpp  UsdWriter.cpp  UsdWriterCore.cpp  main.cpp
